--- a/apps.html
+++ b/apps.html
@@ -3,24 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Apps</title> <!-- change this to ur title of the tab -->
+    <title>Nova</title> <!-- change this to ur title of the tab -->
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #6a4c9c;
+            background-color: #0000FF;
             color: white;
         }
         header {
-            background-color: #5e3b8f;
+            background-color: #000000;
             color: white;
             padding: 20px 30px;
             display: flex;
             justify-content: flex-end;
         }
         header button {
-            background-color: #7f5f9f;
+            background-color: #000000;
             border: none;
             padding: 10px 20px;
             color: white;
@@ -30,18 +30,18 @@
             margin-left: 20px;
         }
         header button:hover {
-            background-color: #9b6fcf;
+            background-color: #000000;
         }
         .section {
             padding: 40px;
             text-align: center;
-            background-color: #7f5f9f;
+            background-color: #000000;
         }
         .app-card {
             display: inline-block;
             width: 200px;
             height: 250px;
-            background-color: #8e6ba7;
+            background-color: #000000;
             margin: 15px;
             border-radius: 10px;
             cursor: pointer;
@@ -57,7 +57,7 @@
             margin-top: 10px;
         }
         footer {
-            background-color: #5e3b8f;
+            background-color: #000000;
             color: white;
             text-align: center;
             padding: 20px 0;
@@ -90,32 +90,34 @@
     <header>
         <button onclick="location.href='index.html'">Games</button>
         <button onclick="location.href='apps.html'">Apps</button>
+        <button onclick="location.href='Retro.html'">Retro</button>
+        <button onclick="location.href='Proxies.html'">Proxies</button>
     </header>
     <div class="section">
-        <h2>Full-Screen Apps</h2>
+        <h2>Apps (Not Working)</h2>
         <div class="app-card" onclick="openFullscreen('https://web.whatsapp.com/')">
             <img src="https://via.placeholder.com/200x160" alt="WhatsApp Web">
             <h3>WhatsApp Web</h3>
         </div>
-        <div class="app-card" onclick="openFullscreen('https://discord.com/app')">
-            <img src="https://via.placeholder.com/200x160" alt="Discord">
-            <h3>Discord</h3>
+        <div class="app-card" onclick="openFullscreen('https://www.xbox.com/en-us/play')">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Xbox_one_logo.svg/1200px-Xbox_one_logo.svg.png" alt="Xbox Cloud">
+            <h3>Xbox Cloud</h3>
         </div>
-        <div class="app-card" onclick="openFullscreen('https://www.youtube.com/')">
-            <img src="https://via.placeholder.com/200x160" alt="YouTube">
+        <div class="app-card" onclick="openFullscreen('https://youtube.com/')">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/e/ef/Youtube_logo.png" alt="YouTube">
             <h3>YouTube</h3>
         </div>
         <div class="app-card" onclick="openFullscreen('https://www.openai.com/chatgpt')">
             <img src="https://via.placeholder.com/200x160" alt="ChatGPT">
             <h3>ChatGPT</h3>
         </div>
-        <div class="app-card" onclick="openFullscreen('https://www.google.com/drive/')">
-            <img src="https://via.placeholder.com/200x160" alt="Google Drive">
-            <h3>Google Drive</h3>
+        <div class="app-card" onclick="openFullscreen('https://www.tiktok.com/')">
+            <img src="https://static.vecteezy.com/system/resources/thumbnails/016/716/485/small_2x/tiktok-icon-free-png.png" alt="TikTok">
+            <h3>TikTok</h3>
         </div>
     </div>
     <footer>
-        <p>&copy; 2024 insert website name</p>
+        <p>&copy; 2025 Big Game Hub V2</p>
     </footer>
 </body>
 </html>
