--- a/apps.html
+++ b/apps.html
@@ -94,11 +94,7 @@
         <button onclick="location.href='Proxies.html'">Proxies</button>
     </header>
     <div class="section">
-        <h2>Apps (Not Working)</h2>
-        <div class="app-card" onclick="openFullscreen('https://web.whatsapp.com/')">
-            <img src="https://via.placeholder.com/200x160" alt="WhatsApp Web">
-            <h3>WhatsApp Web</h3>
-        </div>
+        <h2>Apps</h2>
         <div class="app-card" onclick="openFullscreen('https://www.xbox.com/en-us/play')">
             <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/f/f9/Xbox_one_logo.svg/1200px-Xbox_one_logo.svg.png" alt="Xbox Cloud">
             <h3>Xbox Cloud</h3>
@@ -108,7 +104,7 @@
             <h3>YouTube</h3>
         </div>
         <div class="app-card" onclick="openFullscreen('https://www.openai.com/chatgpt')">
-            <img src="https://via.placeholder.com/200x160" alt="ChatGPT">
+            <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/0/04/ChatGPT_logo.svg/2048px-ChatGPT_logo.svg.png" alt="ChatGPT">
             <h3>ChatGPT</h3>
         </div>
         <div class="app-card" onclick="openFullscreen('https://www.tiktok.com/')">
