--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             color: white;
         }
         header {
-            background-color: #000000;
+            background-color: #0000FF;
             color: white;
             padding: 20px 30px;
             display: flex;
@@ -42,7 +42,7 @@
             display: inline-block;
             width: 200px;
             height: 250px;
-            background-color: #000000;
+            background-color: #0000FF;
             margin: 15px;
             border-radius: 10px;
             cursor: pointer;
@@ -125,7 +125,7 @@
             <h3>Block Blast</h3>
         </div>
     <footer>
-        <p>&copy; 2024 Nova Games-Made By Jackson Simms:)</p> 
+        <p>&copy; 2025 Big Game Hub v2</p> 
     </footer>
 </body> 
 </html>
