--- a/Retro.html
+++ b/Retro.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova</title> <!-- change this to the title of the tab you want -->
+    <title>BGH</title> <!-- change this to the title of the tab you want -->
     <link rel="icon" href="favicon.ico" type="image/x-icon">
     <style>
         body {
@@ -14,7 +14,7 @@
             color: white;
         }
         header {
-            background-color: #5e3b8f;
+            background-color: #0000FF;
             color: white;
             padding: 20px 30px;
             display: flex;
@@ -42,7 +42,7 @@
             display: inline-block;
             width: 200px;
             height: 250px;
-            background-color: #000000;
+            background-color: #0000FF;
             margin: 15px;
             border-radius: 10px;
             cursor: pointer;
@@ -101,7 +101,7 @@
             <h3>M&L Superstar Saga</h3>
         </div>
     <footer>
-        <p>&copy; 2024 Nova Games-Made By Jackson Simms:)</p> 
+        <p>&copy; 2025 Big Game Hub V2</p> 
     </footer>
 </body> 
 </html>
