--- a/apps.html
+++ b/apps.html
@@ -91,7 +91,7 @@
         <button onclick="location.href='index.html'">Games</button>
         <button onclick="location.href='apps.html'">Apps</button>
         <button onclick="location.href='Retro.html'">Retro</button>
-        <button onclick="location.href='Proxies.html'">Proxies</button>
+        <button onclick="location.href='Proxies.html'">Proxies(In the works)</button>
     </header>
     <div class="section">
         <h2>Apps</h2>
