--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
         <button onclick="location.href='index.html'">Games</button>
         <button onclick="location.href='apps.html'">Apps</button>
         <button onclick="location.href='Retro.html'">Retro</button>
-        <button onclick="location.href='Proxies.html'">Proxies</button>
+        <button onclick="location.href='Proxies.html'">Proxies(in the works)</button>
     </header>
     <div class="section">
         <h2>Games</h2> <!-- change this to what you want above ur games -->
