--- a/apps.html
+++ b/apps.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Nova</title> <!-- change this to ur title of the tab -->
+    <title>BGH v2</title> <!-- change this to ur title of the tab -->
     <style>
         body {
             font-family: Arial, sans-serif;
